<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher
    android:id="@+id/profileSwitcher"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/todayTimeDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:paddingTop="5dp"
                    />

                <TextView
                    android:id="@+id/locationTextView"
                    android:layout_below="@+id/todayTimeDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:paddingTop="5dp"/>

                <TextView
                    android:id="@+id/todaySummaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/locationTextView"
                    android:layout_centerHorizontal="true"
                    android:text="@string/loading"
                    android:textColor="@android:color/white"
                    android:paddingTop="20dp"/>


                <LinearLayout
                    android:id="@+id/todayTempLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/todayIconImageView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@+id/todayIconImageView"
                    android:layout_toLeftOf="@+id/todayIconImageView"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/todayTempTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/loading"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/white"
                        android:textSize="50sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/degreeImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="5dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/degree_imageview_cont_desc"
                        android:src="@drawable/ic_degree"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/todayIconImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/todaySummaryTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dunno"
                    android:contentDescription="@string/weather_icon_cont_desc"
                    />

                <LinearLayout
                    android:id="@+id/todayStatLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/todayIconImageView"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/todayIconImageView"
                    android:layout_toRightOf="@+id/todayIconImageView"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HumidityLabelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_label"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/todayHumidityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precip_label"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/todayPrecipTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textColor="@android:color/white"/>
                </LinearLayout>


                <ImageView
                    android:id="@+id/centerImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@android:color/white"
                    android:contentDescription="@string/divider_cont_desc"/>


                <GridView
                    android:id="@+id/forecastGridView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/centerImageView"
                    android:horizontalSpacing="20dp"
                    android:numColumns="3"
                    android:textAlignment="center"
                    android:gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/wULogoImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:maxWidth="150dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/wundergroundlogo"
                    android:visibility="visible"
                    android:contentDescription="@string/wu_logo_cont_desc"/>

                <TextView
                    android:id="@+id/providerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/powered_by_forecast"
                    android:textColor="@android:color/white"
                    android:visibility="invisible"/>


            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context="com.prindle.a.r.weatherrp.LocationActivity"
                    android:background="@color/mainBackground">

        <TextView
            android:text="@string/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationLabel"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/locationEditText"
            android:layout_below="@+id/locationLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/location_edit_text_hint"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationListView"
            android:layout_below="@+id/locationEditText"
            android:dividerHeight="3dp"
            android:background="@android:color/black"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_location_button_title"
                android:id="@+id/locationButton"
                android:textColor="@android:color/white"
                android:background="@color/material_blue_grey_900"
                android:layout_margin="5dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:id="@+id/cancelButton"
                android:textColor="@android:color/white"
                android:background="@color/material_blue_grey_900"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </LinearLayout>


    </RelativeLayout>
</ViewSwitcher>
